# FluffECS

./: CMakeLists.txt  README.md
examples/: example.cpp
include/FluffECS/: Archetype.h  ComponentContainer.h  DynamicVector.h  Entity.h  IterableContainerAdapter.h  IteratorContainer.h  KeySequenceTree.h  Keywords.h  Serialization.h  SortedKeyTree.h  SparseSet.h  TypeId.h  TypeIdTree.h  TypeList.h  VirtualConstructor.h  World.h  WorldInternal.h
test/: CMakeLists.txt  TestDynamicVector.cpp  TestWorld.cpp
